fix style: imrpove responsiveness for my photo in header component (it was too big at one point)

--- a/client/src/components/header/assets/Header.css
+++ b/client/src/components/header/assets/Header.css
@@ -53,6 +53,13 @@
     text-align: center;
 }
 
+@media screen and (max-width: 1100px) {
+    .photoContainer img {
+        height: 150px;
+        width: 150px;
+    }
+}
+
 @media screen and (max-width: 680px) {
     .header {
         height: fit-content;
